--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "phpunit/phpunit": "~6.0",
-    "mockery/mockery": "~0.9"
+    "mockery/mockery": "~0.9",
+    "barryvdh/laravel-ide-helper": "^2.5"
   },
   "autoload": {
     "psr-4": {
@@ -32,6 +33,11 @@
   "scripts": {
     "post-root-package-install": [
       "php -r \"copy('.env.example', '.env');\""
+    ],
+    "post-update-cmd": [
+      "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+      "php artisan ide-helper:generate",
+      "php artisan ide-helper:meta"
     ]
   },
   "minimum-stability": "dev",
