--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": ">=5.6.4",
+    "php": ">=7.2",
     "laravel/lumen-framework": "5.5.*",
-    "vlucas/phpdotenv": "~2.2"
+    "vlucas/phpdotenv": "~2.2",
+    "league/flysystem": "^1.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
