--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "laravel/lumen-framework": "5.5.*",
     "vlucas/phpdotenv": "~2.2",
     "league/flysystem": "^1.0",
-    "ext-json": "*"
+    "ext-json": "*",
+    "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
