--- a/.scrutinzier.yml
+++ b/.scrutinzier.yml
@@ -4,11 +4,10 @@ build:
             project_setup:
                 override:
                 - 'true'
-            tests:
+            codestyle:
                 override:
                 - php-scrutinizer-run
                 - command: phpcs-run
-                  use_website_config: true
         tests: true
         coverage:
             tests:
