--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,7 +4,7 @@ build:
             project_setup:
                 override:
                 - 'true'
-            codestyle:
+            tests:
                 override:
                 - php-scrutinizer-run
                 - command: phpcs-run
